--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,29 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "resolvePackageJsonExports": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
+    "module": "CommonJS",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2022",
+    "esModuleInterop": true,
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "sourceMap": true,
     "outDir": "dist",
-    "rootDir": "src",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "allowJs": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    ".eslintrc.js",
+    "src/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
